--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --mode development --hot",
     "dev:open": "webpack-dev-server --mode development --hot --open",
-    "build": "NODE_ENV='production' webpack --mode=production",
-    "tailwindcss": "postcss src/tailwind.css -o src/app_tailwind.css"
+    "build": "NODE_ENV='production' webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -44,7 +43,6 @@
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^5.0.1",
